fix: added z-index

--- a/apps/web/src/app/menu-desktop.module.css
+++ b/apps/web/src/app/menu-desktop.module.css
@@ -2,6 +2,7 @@
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+  z-index: 40;
 }
 
 @keyframes scaleIn {
